// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Voyd syntax shape contract > preserves 'attributes, tests, and compiler-facin…' 1`] = `
[
  "ast",
  [
    "eff",
    "Console",
    [
      "block",
      [
        "op",
        [
          "->",
          [
            "log",
            [
              ":",
              "message",
              "String",
            ],
          ],
          "void",
        ],
      ],
    ],
  ],
  [
    "fn",
    [
      "->",
      [
        "intrinsic_add",
        [
          ":",
          "left",
          "i32",
        ],
        [
          ":",
          "right",
          "i32",
        ],
      ],
      "i32",
    ],
  ],
  [
    "test",
    [
      "new_string",
      [
        "fixed_array_literal",
        "115",
        "121",
        "110",
        "116",
        "97",
        "120",
        "32",
        "99",
        "111",
        "110",
        "116",
        "114",
        "97",
        "99",
        "116",
      ],
    ],
    [
      "block",
      [
        "assert",
        "true",
      ],
    ],
  ],
]
`;

exports[`Voyd syntax shape contract > preserves 'bindings, lambdas, tuples, arrays, an…' 1`] = `
[
  "ast",
  [
    "fn",
    [
      "values",
      [
        ":",
        "input",
        "i32",
      ],
    ],
    [
      "block",
      [
        "let",
        [
          "=",
          [
            "tuple",
            "left",
            "right",
          ],
          [
            "tuple",
            "input",
            [
              "+",
              "input",
              "1",
            ],
          ],
        ],
      ],
      [
        "let",
        [
          "=",
          [
            "~",
            "owned",
          ],
          [
            "acquire",
          ],
        ],
      ],
      [
        "let",
        [
          "=",
          "items",
          [
            "new_array_unchecked",
            [
              ":",
              "from",
              [
                "fixed_array_literal",
                "left",
                "right",
                [
                  "...",
                  "rest",
                ],
              ],
            ],
          ],
        ],
      ],
      [
        "let",
        [
          "=",
          "record",
          [
            "object_literal",
            "left",
            [
              ":",
              "right",
              [
                "transform",
                "right",
              ],
            ],
            [
              "...",
              "base",
            ],
          ],
        ],
      ],
      [
        "let",
        [
          "=",
          "expanded",
          [
            "+",
            [
              "...",
              [
                ".",
                "input",
                "items",
              ],
            ],
            [
              ".",
              "other",
              "value",
            ],
          ],
        ],
      ],
      [
        "let",
        [
          "=",
          "callback",
          [
            "=>",
            [
              [
                ":",
                "value",
                "i32",
              ],
              [
                ":",
                "index",
                "i32",
              ],
            ],
            [
              "+",
              "value",
              "index",
            ],
          ],
        ],
      ],
      [
        "callback",
        [
          ".",
          "record",
          "left",
        ],
        "0",
      ],
    ],
  ],
]
`;

exports[`Voyd syntax shape contract > preserves 'calls, labels, generics, and trailing…' 1`] = `
[
  "ast",
  [
    "fn",
    [
      "calls",
      [
        ":",
        "value",
        "i32",
      ],
    ],
    [
      "block",
      [
        "fib",
        [
          "-",
          "value",
          "1",
        ],
      ],
      [
        "dispatch",
        [
          "generics",
          "i32",
        ],
        [
          ":",
          "event",
          "value",
        ],
        [
          ":",
          "priority",
          [
            "+",
            "value",
            "1",
          ],
        ],
      ],
      [
        "fib",
        [
          "-",
          "value",
          "1",
        ],
        [
          ":",
          "label",
          "value",
        ],
      ],
      [
        "fib",
        [
          "generics",
          "i32",
        ],
        [
          "-",
          "value",
          "1",
        ],
        "value",
      ],
      [
        "fib",
        [
          "generics",
          "i32",
        ],
        [
          "tuple",
          [
            "-",
            "value",
            "1",
          ],
          "value",
        ],
      ],
      [
        ".",
        "values",
        [
          "reduce",
          [
            ":",
            "initial",
            "0",
          ],
          [
            "=>",
            [
              "acc",
              "item",
            ],
            [
              "block",
              [
                "+",
                "acc",
                "item",
              ],
            ],
          ],
        ],
      ],
      [
        "hi",
        [
          ":",
          "there",
          [
            "=>",
            "what",
            "is",
          ],
        ],
        "up",
      ],
    ],
  ],
]
`;

exports[`Voyd syntax shape contract > preserves 'declarations, generic constraints, an…' 1`] = `
[
  "ast",
  [
    "type",
    [
      "=",
      [
        "Pair",
        [
          "generics",
          "T",
        ],
      ],
      [
        "tuple",
        "T",
        "T",
      ],
    ],
  ],
  [
    "obj",
    [
      "Box",
      [
        "generics",
        [
          ":",
          "T",
          "Display",
        ],
      ],
      [
        "object_literal",
        [
          ":",
          "value",
          "T",
        ],
      ],
    ],
  ],
  [
    "trait",
    [
      "Map",
      [
        "generics",
        "Input",
        "Output",
      ],
    ],
    [
      "block",
      [
        "fn",
        [
          ":",
          [
            "map",
            "self",
            [
              ":",
              [
                ":",
                "transform",
                [
                  "fn",
                  "Input",
                ],
              ],
              [
                "->",
                "open",
                "Output",
              ],
            ],
          ],
          [
            "->",
            "open",
            "Output",
          ],
        ],
      ],
    ],
  ],
  [
    "eff",
    "Console",
    [
      "block",
      [
        "op",
        [
          "->",
          [
            "write",
            [
              ":",
              "message",
              "String",
            ],
          ],
          "void",
        ],
      ],
    ],
  ],
  [
    "fn",
    [
      ":",
      [
        "apply",
        [
          "generics",
          [
            ":",
            "T",
            "Display",
          ],
        ],
        [
          ":",
          "value",
          "T",
        ],
        [
          ":",
          [
            ":",
            "transform",
            [
              "fn",
              "T",
            ],
          ],
          [
            "->",
            "open",
            "T",
          ],
        ],
      ],
      [
        "->",
        "open",
        "T",
      ],
    ],
    [
      "block",
      [
        "transform",
        "value",
      ],
    ],
  ],
]
`;

exports[`Voyd syntax shape contract > preserves 'dot-lambda chaining' 1`] = `
[
  "ast",
  [
    "fn",
    [
      "->",
      [
        "transform",
      ],
      "i32",
    ],
    [
      "block",
      [
        ".",
        [
          ".",
          "2",
          [
            "=>",
            [
              ":",
              "value",
              "i32",
            ],
            [
              "+",
              "value",
              "3",
            ],
          ],
        ],
        [
          "=>",
          [
            ":",
            "value",
            "i32",
          ],
          [
            "*",
            "value",
            "5",
          ],
        ],
      ],
    ],
  ],
]
`;

exports[`Voyd syntax shape contract > preserves 'indentation, blocks, and control-flow…' 1`] = `
[
  "ast",
  [
    "fn",
    [
      "control",
      [
        ":",
        "value",
        "i32",
      ],
    ],
    [
      "block",
      [
        "if",
        [
          "<",
          "value",
          "0",
        ],
        [
          ":",
          "then",
          [
            "block",
            "-1",
          ],
        ],
      ],
      [
        "elif",
        [
          "==",
          "value",
          "0",
        ],
        [
          ":",
          "then",
          [
            "block",
            "0",
          ],
        ],
        [
          ":",
          "else",
          [
            "block",
            [
              "match",
              "value",
              [
                ":",
                [
                  "Some",
                  [
                    "generics",
                    "i32",
                  ],
                  [
                    "object_literal",
                    [
                      ":",
                      "value",
                      "inner",
                    ],
                  ],
                ],
                [
                  "block",
                  [
                    "while",
                    [
                      ":",
                      [
                        ">",
                        "inner",
                        "0",
                      ],
                      [
                        "block",
                        [
                          "consume",
                          "inner",
                        ],
                      ],
                    ],
                  ],
                ],
              ],
              [
                ":",
                "else",
                [
                  "block",
                  [
                    "for",
                    [
                      ":",
                      [
                        "in",
                        "item",
                        [
                          "..<",
                          "0",
                          "value",
                        ],
                      ],
                      [
                        "block",
                        [
                          "consume",
                          "item",
                        ],
                      ],
                    ],
                  ],
                ],
              ],
            ],
          ],
        ],
      ],
    ],
  ],
]
`;

exports[`Voyd syntax shape contract > preserves 'macro template splice forms' 1`] = `
[
  "ast",
  [
    "fn",
    [
      "template_surface",
    ],
    [
      "block",
      "$value",
      [
        "$",
        "value",
      ],
      "$$values",
      [
        "$$",
        "values",
      ],
      [
        "block",
        "$body",
      ],
    ],
  ],
]
`;

exports[`Voyd syntax shape contract > preserves 'module imports, aliases, and qualifie…' 1`] = `
[
  "ast",
  [
    "use",
    [
      "::",
      [
        "::",
        "std",
        "collections",
      ],
      [
        "object_literal",
        "Array",
        [
          "as",
          "Map",
          "HashMap",
        ],
      ],
    ],
  ],
  [
    "use",
    [
      "::",
      [
        "::",
        "std",
        "io",
      ],
      "all",
    ],
  ],
  [
    "pub",
    "use",
    [
      "::",
      [
        "::",
        "app",
        "model",
      ],
      "User",
    ],
  ],
  [
    "mod",
    "nested",
    [
      "block",
      [
        "pub",
        "fn",
        [
          "=",
          [
            "->",
            [
              "value",
            ],
            "i32",
          ],
          "1",
        ],
      ],
    ],
  ],
  [
    "fn",
    [
      "access",
      [
        ":",
        "receiver",
        "Value",
      ],
    ],
    [
      "block",
      [
        "::",
        "nested",
        [
          "value",
        ],
      ],
      [
        ".",
        "receiver",
        [
          "::",
          "Display",
          [
            "to_string",
          ],
        ],
      ],
      [
        "::",
        [
          "::",
          "Package",
          "Type",
        ],
        [
          "member",
          "receiver",
        ],
      ],
    ],
  ],
]
`;

exports[`Voyd syntax shape contract > preserves 'multiline call separators and closure…' 1`] = `
[
  "ast",
  [
    "fn",
    [
      "closure_arguments",
    ],
    [
      "block",
      [
        "let",
        [
          "=",
          "result",
          [
            "invoke",
            [
              "add",
              "1",
              "2",
            ],
            [
              "=>",
              [],
              [
                "block",
                [
                  "first",
                ],
              ],
            ],
            [
              "+",
              "3",
              "4",
            ],
          ],
        ],
      ],
      [
        "consume_many",
        "1",
        [
          "=>",
          [],
          [
            "first",
          ],
        ],
        "3",
        [
          "=>",
          [],
          [
            "block",
            [
              "second",
            ],
          ],
        ],
        "4",
        [
          "=>",
          [],
          "5",
        ],
        [
          "=>",
          [],
          [
            "block",
            "6",
          ],
        ],
        [
          "=>",
          [],
          [
            "block",
            "7",
          ],
        ],
        "8",
      ],
    ],
  ],
]
`;

exports[`Voyd syntax shape contract > preserves 'multiple labeled callback clauses' 1`] = `
[
  "ast",
  [
    "fn",
    [
      "callbacks",
      [
        ":",
        "values",
        "Values",
      ],
    ],
    [
      "block",
      [
        ".",
        "values",
        [
          "reduce",
          [
            ":",
            "initial",
            "0",
          ],
          [
            ":",
            "on_value",
            [
              "=>",
              [
                "acc",
                "item",
              ],
              [
                "block",
                [
                  "+",
                  "acc",
                  "item",
                ],
              ],
            ],
          ],
          [
            ":",
            "on_empty",
            [
              "=>",
              [],
              [
                "block",
                "0",
              ],
            ],
          ],
        ],
      ],
      [
        ".",
        "values",
        [
          "reduce",
          "0",
          "1",
          "2",
          [
            ":",
            "success",
            [
              "=>",
              [],
              [
                "block",
                [
                  "finish",
                ],
              ],
            ],
          ],
          [
            ":",
            "failure",
            [
              "=>",
              [],
              [
                "recover",
              ],
            ],
          ],
        ],
      ],
    ],
  ],
]
`;

exports[`Voyd syntax shape contract > preserves 'newline fluent clauses and nested gen…' 1`] = `
[
  "ast",
  [
    "fn",
    [
      "chained",
      [
        ":",
        "values",
        "Values",
      ],
    ],
    [
      "block",
      [
        ".",
        [
          ".",
          [
            ".",
            "values",
            [
              "pop",
            ],
          ],
          [
            "match",
            "item",
            [
              ":",
              [
                "Some",
                [
                  "generics",
                  [
                    "Optional",
                    [
                      "generics",
                      "i32",
                    ],
                  ],
                ],
              ],
              [
                "block",
                [
                  ".",
                  "item",
                  "value",
                ],
              ],
            ],
            [
              ":",
              "None",
              [
                "block",
                [
                  "None",
                  [
                    "object_literal",
                  ],
                ],
              ],
            ],
          ],
        ],
        [
          "match",
          "item",
          [
            ":",
            [
              "Some",
              [
                "generics",
                "i32",
              ],
            ],
            [
              "block",
              [
                ".",
                "item",
                "value",
              ],
            ],
          ],
          [
            ":",
            "None",
            [
              "block",
              "-1",
            ],
          ],
        ],
      ],
    ],
  ],
]
`;

exports[`Voyd syntax shape contract > preserves 'operator precedence, pipes, optional …' 1`] = `
[
  "ast",
  [
    "fn",
    [
      "operators",
      [
        ":",
        "a",
        "i32",
      ],
      [
        ":",
        "b",
        "i32",
      ],
      [
        ":",
        "c",
        "i32",
      ],
    ],
    [
      "block",
      [
        "let",
        [
          "=",
          "arithmetic",
          [
            "^",
            [
              "+",
              "a",
              [
                "*",
                "b",
                "c",
              ],
            ],
            "2",
          ],
        ],
      ],
      [
        "let",
        [
          "=",
          "piped",
          [
            "|>",
            [
              "|>",
              "a",
              "transform",
            ],
            "finish",
          ],
        ],
      ],
      [
        "let",
        [
          "=",
          "fallback",
          [
            "??",
            [
              "?.",
              "value",
              "field",
            ],
            "default_value",
          ],
        ],
      ],
      [
        "let",
        [
          "=",
          "exclusive",
          [
            "subscript",
            "values",
            [
              "..<",
              "1",
              "4",
            ],
          ],
        ],
      ],
      [
        "let",
        [
          "=",
          "inclusive",
          [
            "subscript",
            "values",
            [
              "..=",
              "4",
            ],
          ],
        ],
      ],
      [
        "subscript",
        "values",
        "..",
      ],
      "10",
      [
        "+",
        "3",
      ],
    ],
  ],
]
`;

exports[`Voyd syntax shape contract > preserves 'string interpolation and HTML reader …' 1`] = `
[
  "ast",
  [
    "fn",
    [
      "view",
      [
        ":",
        "name",
        "String",
      ],
      [
        ":",
        "active",
        "bool",
      ],
    ],
    [
      "block",
      [
        "let",
        [
          "=",
          "greeting",
          [
            "new_string",
            [
              "fixed_array_literal",
              "72",
              "101",
              "108",
              "108",
              "111",
              "32",
              "123",
              "110",
              "97",
              "109",
              "101",
              "125",
              "33",
            ],
          ],
        ],
      ],
      [
        "html_element",
        [
          ":",
          "tag",
          [
            "new_string",
            [
              "fixed_array_literal",
              "115",
              "101",
              "99",
              "116",
              "105",
              "111",
              "110",
            ],
          ],
        ],
        [
          ":",
          "attrs",
          [
            "new_array_unchecked",
            [
              ":",
              "from",
              [
                "fixed_array_literal",
                [
                  "attr",
                  [
                    ":",
                    "name",
                    [
                      "new_string",
                      [
                        "fixed_array_literal",
                        "104",
                        "105",
                        "100",
                        "100",
                        "101",
                        "110",
                      ],
                    ],
                  ],
                  [
                    ":",
                    "value",
                    "true",
                  ],
                ],
                [
                  "class",
                  [
                    "new_string",
                    [
                      "fixed_array_literal",
                      "99",
                      "97",
                      "114",
                      "100",
                    ],
                  ],
                ],
                [
                  "attr",
                  [
                    ":",
                    "name",
                    [
                      "new_string",
                      [
                        "fixed_array_literal",
                        "100",
                        "97",
                        "116",
                        "97",
                        "45",
                        "97",
                        "99",
                        "116",
                        "105",
                        "118",
                        "101",
                      ],
                    ],
                  ],
                  [
                    ":",
                    "value",
                    "active",
                  ],
                ],
              ],
            ],
          ],
        ],
        [
          ":",
          "children",
          [
            "new_array_unchecked",
            [
              ":",
              "from",
              [
                "fixed_array_literal",
                [
                  "html_element",
                  [
                    ":",
                    "tag",
                    [
                      "new_string",
                      [
                        "fixed_array_literal",
                        "104",
                        "49",
                      ],
                    ],
                  ],
                  [
                    ":",
                    "children",
                    [
                      "new_array_unchecked",
                      [
                        ":",
                        "from",
                        [
                          "fixed_array_literal",
                          "greeting",
                        ],
                      ],
                    ],
                  ],
                ],
                [
                  "keyed",
                  [
                    ":",
                    "key",
                    "name",
                  ],
                  [
                    ":",
                    "child",
                    [
                      "Button",
                      [
                        "object_literal",
                        [
                          ":",
                          "onClick",
                          [
                            "=>",
                            [],
                            [
                              "select",
                              "name",
                            ],
                          ],
                        ],
                        [
                          ":",
                          "children",
                          [
                            "new_array_unchecked",
                            [
                              ":",
                              "from",
                              [
                                "fixed_array_literal",
                                [
                                  "new_string",
                                  [
                                    "fixed_array_literal",
                                    "67",
                                    "104",
                                    "111",
                                    "111",
                                    "115",
                                    "101",
                                    "32",
                                  ],
                                ],
                              ],
                            ],
                          ],
                        ],
                      ],
                    ],
                  ],
                ],
              ],
            ],
          ],
        ],
      ],
    ],
  ],
]
`;
